  * Optimize some fprintf params (thanks to M. Muehlhoff).
  * Fix datatype issue: use __WORDSIZE for checking 64 bit arch.
  * debian/control:
    - Bump to Standards-Version 3.9.3.
    - Move to build dependency debhelper (>= 8).
    - Move to build dependency libtiff-dev.
    - Remove old versions in dependencies.
    - Remove old conflicts field.

 -- Joachim Wiedorn <ad_debian@joonet.de>  Wed, 13 Jun 2012 22:15:25 +0200

capi4hylafax (1:01.03.00.99.svn.300-16) unstable; urgency=low

  * Adapt to hylafax 6.0 Debian package bind-mounting
    /var/spool/hylafax/etc (closes: #554631)
  * Implement parallel=n DEB_BUILD_OPTIONS

 -- Lionel Elie Mamane <lmamane@debian.org>  Wed, 02 Dec 2009 17:55:37 +0100

capi4hylafax (1:01.03.00.99.svn.300-15) unstable; urgency=low

  * Work around bug #554631 on upgrades

 -- Lionel Elie Mamane <lmamane@debian.org>  Thu, 05 Nov 2009 22:41:20 +0100

capi4hylafax (1:01.03.00.99.svn.300-14) unstable; urgency=low

  * init script: report success on start when already running
    and on stop when not running (closes: #554631)

 -- Lionel Elie Mamane <lmamane@debian.org>  Thu, 05 Nov 2009 22:16:33 +0100

capi4hylafax (1:01.03.00.99.svn.300-13) unstable; urgency=low

  * Bump up Standards-Version to 3.8.3
  * Move debhelper compat level to 7
  * Remove erroneous /etc/default/default file (Closes: #510610).
  * Update config.{guess,sub}

 -- Lionel Elie Mamane <lmamane@debian.org>  Fri, 16 Oct 2009 12:05:36 +0200

capi4hylafax (1:01.03.00.99.svn.300-12) unstable; urgency=low

  * Properly quote CXXFLAGS, allowing spaces in it (Closes: #476041).

 -- Lionel Elie Mamane <lmamane@debian.org>  Mon, 14 Apr 2008 13:48:52 +0200

capi4hylafax (1:01.03.00.99.svn.300-11) unstable; urgency=low

  * Suggest dialog. (closes: #470728)
  * Make the init.d script strictly /bin/sh-policy compliant.
    (closes: #471418)

 -- Lionel Elie Mamane <lmamane@debian.org>  Wed, 19 Mar 2008 10:42:18 +0100
